<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.zavierdev.cinemacatalogue.ui.home.movie.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="com.zavierdev.cinemacatalogue.ui.home.tvshow.TvShowFragment"
        android:label="@string/title_tv_show"
        tools:layout="@layout/fragment_tv_show" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.zavierdev.cinemacatalogue.ui.home.favorite.FavoriteCinemaFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite_cinema" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.zavierdev.cinemacatalogue.ui.home.info.DeveloperInfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_developer_info" />

</navigation>