<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".ui.home.info.DeveloperInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="300dp"
            android:layout_height="400dp"
            android:layout_marginBottom="50dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/developer_picture" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@color/purple_500">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/name"
                android:text="@string/developer_name"
                android:textColor="#3C3B3B"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_baseline_location_on_24"
            app:startIconTint="@color/purple_500">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/address"
                android:text="@string/developer_address"
                android:textColor="#3C3B3B"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_baseline_public_24"
            app:startIconTint="@color/purple_500">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_developer_web_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/webpage"
                android:text="@string/developer_webpage"
                android:textColor="#033AFF"
                android:textStyle="italic" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>