<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.search.SearchCinemaActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:startIconDrawable="@drawable/ic_baseline_search_24_black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_search_cinema"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Search"
            android:paddingTop="12dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/loading_search_cinema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_search_not_found"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_found"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_search_connection_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection_error"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_cinema"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        tools:listitem="@layout/item_search_cinema" />
</LinearLayout>